* resize-handle.gif is a horribly wrong version... Seriously, 800+ bytes for that? Also reworked the 'picture' to suggest enlargement. (resize-handle.gif) * Repositioned sprites so that the empty space is at the bottom right. (bbc/sprite.png) + Did I actually forget to commit edit.gif in the smiley list...? Maybe this should be a BBC button instead, though... (edit.gif) ! Fixed wrong resizer bar width on IE browsers. (editor_ie.css)

--- a/Themes/default/css/editor_ie.css
+++ b/Themes/default/css/editor_ie.css
@@ -23,10 +23,11 @@
 {
 	height: 5px;
 	font-size: 0;
-	background: #eeeeee url(../images/bbc/resize-handle.gif) no-repeat 50% 1px;
-	border: 1px solid #dddddd;
+	background: #eee url(../images/bbc/resize-handle.gif) no-repeat 50% 1px;
+	border: 1px solid #ddd;
 	border-top-width: 0;
 	cursor: s-resize;
+	padding: 0 !important;
 }
 .rich_editor a img
 {
